--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -209,7 +209,7 @@ body {
         background-position: center; 
         background-size: cover; 
         width: 100%;
-        height: 650px;
+        height: 780px;
         display: flex;  
     }
     
@@ -265,6 +265,10 @@ body {
     
     .label-form{
         font-size: 0.8rem;
+    }
+
+    .logo{
+        width:60%;
     }
 
     .marca{
@@ -724,6 +728,10 @@ body {
     
     .label-form{
         font-size: 1.5rem;
+    }
+
+    .logo{
+        width:50%;
     }
 
     .marca{
@@ -1186,6 +1194,10 @@ header{
 
 .label-form{
     font-size: 1.5rem;
+}
+
+.logo{
+    width:30%;
 }
 
 .parrafo-pitch{
